# jan-assistant-pro

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HIGH_IMPACT_IMPROVEMENTS_SUMMARY.md  INSTALLER_README.md  INSTALLER_SUMMARY.md  LICENSE  Makefile  README.md  REFACTORING_SUMMARY.md  error_report_cli.py  install_wizard.py  jan_simple_gui.py  main.py  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  setup.py  start.sh
.github/workflows/: ci.yml  release.yml
assets/: jan_gui_fixed.py
config/: config.example.json
docs/: DEVELOPER_GUIDE.md  index.md
docs/source/: conf.py  index.rst
examples/: jan_gui_fixed.py
setup/: __init__.py  api_providers.py  config_wizard.py  dependency_manager.py  system_check.py
src/core/: __init__.py  api_client.py  app_config.py  app_controller.py  async_api_client.py  cache.py  circuit_breaker.py  command_bus.py  config.py  config_validator.py  degraded_mode.py  enhanced_config.py  error_reporter.py  event_manager.py  exceptions.py  health_checker.py  history.py  logging_config.py  memory.py  memory_repository.py  metrics.py  migration_manager.py  request_context.py  retry.py  secure_config.py  storage.py  unified_config.py  user_friendly_error.py  utils.py
src/gui/: __init__.py  async_bridge.py  enhanced_widgets.py  help_manager.py  main_window.py
src/migrations/: 0001_initial.py  0002_add_notes_table.py
src/plugins/: plugin_loader.py
src/tools/: base_tool.py  file_tools.py  secure_command_executor.py  system_tools.py  tool_factory.py  tool_interface.py  (+1 more)
tests/: conftest.py  factories.py  test_api_client.py  test_app_config.py  test_app_controller.py  test_async_api_client.py  test_async_gui_bridge.py  test_cache.py  test_command_bus.py  test_config_cache_reload.py  test_degraded_mode.py  test_enhanced_config.py  test_enhanced_features.py  test_enhanced_memory_manager.py  test_error_reporter.py  test_event_manager.py  test_file_tools.py  test_gui_widgets.py  test_health_checker.py  test_help_manager.py  test_history.py  test_hypothesis_config.py  test_hypothesis_file_tools.py  test_hypothesis_memory.py  test_input_validation.py  test_memory_manager.py  test_memory_repository.py  test_metrics.py  test_migrations.py  test_performance.py  test_plugin_loader.py  test_request_context.py  test_retry.py  test_secure_command_executor.py  test_secure_config.py  test_storage_interface.py  test_system_tools.py  test_tool_fuzzing.py  test_user_friendly_error.py  test_utils.py
