[tool.poetry]
name = "jan-assistant-pro"
version = "0.1.0"
description = "A powerful, local-first AI assistant with tools that work with Jan.ai"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
requests = ">=2.31.0"
python-dotenv = ">=1.0.0"
psutil = { version = ">=5.8.0", optional = true }
orjson = { version = ">=3.8.0", optional = true }
httpx = { version = ">=0.25.0", optional = true }
aiohttp = "^3.9"
prometheus-client = ">=0.22"
cachetools = ">=5.3"

[tool.poetry.extras]
system = ["psutil"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
ruff = "^0.4.4"
mypy = "^1.0"
pre-commit = "^3.5"
pytest-asyncio = "^0.23"
pytest-cov = "^6.2"
pytest-benchmark = "^4.0"
hypothesis = "^6.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py38"
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
